Refactor README and translation files; remove unused introduction data

--- a/src/data/projects.en.json
+++ b/src/data/projects.en.json
@@ -11,7 +11,7 @@
   },
   {
     "title": "LongWayDrivers (LWD Team)",
-    "description": "A comprehensive open.mp gamemode focused on realistic cargo transport simulation. It includes dynamic delivery missions, vehicle customisation, an economic system, driver progression, and immersive gameplay mechanics. The project emphasises user experience through detailed environments and engaging progression systems.",
+    "description": "A comprehensive open.mp gamemode focused on cargo transport simulation. It includes dynamic delivery missions, an economic system, player progression, and immersive gameplay mechanics.",
     "url": "https://github.com/longwaydrivers"
   },
   {
