--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -11,7 +11,7 @@
   },
   {
     "title": "LongWayDrivers (LWD Team)",
-    "description": "Gamemode abrangente para open.mp focado em simulação realista de transporte de carga. Inclui missões de entrega dinâmicas, personalização de veículos, sistema económico, progressão do condutor e mecânicas de jogo imersivas. O projeto enfatiza a experiência do utilizador através de ambientes detalhados e sistemas de progressão envolventes.",
+    "description": "Gamemode abrangente para open.mp focado em simulação de transporte de carga. Inclui missões de entrega dinâmicas, sistema económico, progressão do jogador e mecânicas de jogo imersivas.",
     "url": "https://github.com/longwaydrivers"
   },
   {
